tests/ui/docbox/invalid_argument.stderr
error: Unknown field: `invalid`
 --> $DIR/invalid_argument.rs:3:10
  |
3 | #[docbox(invalid="argument")]
  |          ^^^^^^^^^^^^^^^^^^
