tests/ui/docbox/invalid_argument.rs
use doc_item::docbox;

#[docbox(invalid="argument")]
fn invalid_arguments() {}

fn main() {}
